// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`theme should dispatch a cycle of theme 1`] = `
{
  "payload": 1,
  "type": "CYCLE_THEME",
}
`;

exports[`theme should dispatch a cycle of theme 2`] = `
{
  "payload": -1,
  "type": "CYCLE_THEME",
}
`;

exports[`theme should dispatch a select of theme 1`] = `
{
  "payload": {
    "id": "test",
    "name": "Test",
    "numOfColors": 8,
  },
  "type": "SELECT_THEME",
}
`;

exports[`theme should dispatch a toggle of timetable orientation 1`] = `
{
  "payload": null,
  "type": "TOGGLE_TIMETABLE_ORIENTATION",
}
`;
